--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --recusive --exit",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -22,8 +22,10 @@
     "mongoose": "^5.10.14"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "mongodb-memory-server": "^6.9.2",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   }
 }
