--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha --recusive --exit",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node seed.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +20,9 @@
     "express-validator": "^6.6.1",
     "json2csv": "^5.0.4",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.14"
+    "mongoose": "^5.10.14",
+    "mongoose-seed": "^0.6.0",
+    "v-response": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
