--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - MONGO_HOSTNAME=mongo
       - MONGO_DB=playersdb
       - MONGO_PORT=27017
+      - SERVER_PORT=8000
     ports:
       - "8000:8000"
     links:
